Don't call TaskHub::addTask() directly from non-main thread

Fixes: QTCREATORBUG-26335
Change-Id: I23323edd32fa1f8d5d49943e3b4c37a305e53dd2
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>